--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>jsoup</artifactId>
       <version>1.12.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.liquibase</groupId>
+      <artifactId>liquibase-core</artifactId>
+      <version>4.23.1</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -112,6 +117,14 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.liquibase</groupId>
+        <artifactId>liquibase-maven-plugin</artifactId>
+        <version>4.23.1</version>
+        <configuration>
+          <propertyFile>src/main/resources/db/rabbit.properties</propertyFile>
+        </configuration>
       </plugin>
     </plugins>
   </build>
